# PreviewsMCP

./: .bazelignore  .bazelrc  .envrc  .gitignore  .mcp.json  .swift-format  .swiftformat  .swiftlint.yml  AGENTS.md  BUILD.bazel  Brewfile  CLAUDE.md  LICENSE  MODULE.bazel  Package.resolved  Package.swift  README.md  SPEC-config-traits-setup.md  SPEC.md
Sources/PreviewsCLI/: BUILD.bazel  BuildHelpers.swift  ConfigureCommand.swift  DaemonClient.swift  DaemonClientChannel.swift  DaemonLifecycle.swift  DaemonListener.swift  DaemonPaths.swift  DaemonProbe.swift  DaemonProtocol.swift  DaemonRestart.swift  DaemonToolError.swift  ElementsCommand.swift  ListCommand.swift  LogsCommand.swift  MCPContentHelpers.swift  MCPServer.swift  MCPToolSchemas.swift  PlaygroundCommand.swift  PreviewsMCPApp.swift  RunCommand.swift  ServeCommand.swift  SessionResolver.swift  SimulatorsCommand.swift  SnapshotCommand.swift  StallTimer.swift  StatusCommand.swift  StopCommand.swift  SwitchCommand.swift  TouchCommand.swift  VariantsCommand.swift
Sources/PreviewsCLI/Handlers/: HandlerContext.swift  PreviewConfigureHandler.swift  PreviewElementsHandler.swift  PreviewListHandler.swift  PreviewStartHandler.swift  PreviewStopHandler.swift  SessionListHandler.swift  TraitPropertySchema.swift
Sources/PreviewsCLI/TerminalImages/: DownscaleCG.swift  Environment.swift  ITerm2Encoder.swift  TerminalCapability.swift  TerminalImages.swift  TmuxPassthrough.swift
Sources/PreviewsEngine/: BUILD.bazel  BuildHelpers.swift  ConfigCache.swift  IOSPreviewHandle.swift  IOSSessionManager.swift  MacOSPreviewHandle.swift  SessionRegistry.swift  SessionRouter.swift
Sources/PreviewsIOS/: AVCCVideoStream.swift  BUILD.bazel  FrameSource.swift  H264Encoder.swift  IOSAgentBuilder.swift  IOSAppIconData.swift  IOSHostAppSource.swift  IOSHostBuilder.swift  IOSHostChannel.swift  IOSPreviewSession.swift  InputSink.swift  PreviewAppServer.swift  SimulatorManager.swift
Sources/PreviewsIOS/Resources/: client.html
Sources/PreviewsJITLink/: BUILD.bazel  IOSJITStructuralReloader.swift  JITStructuralReloader.swift  PreviewsJITLink.swift
Sources/SimulatorBridge/: BUILD.bazel  SimulatorBridge.m
Sources/SimulatorBridge/include/: SimulatorBridge.h
Sources/previewsmcp/: BUILD.bazel  main.swift
Tests/MCPIntegrationTests/: BUILD.bazel  BuildInfoTests.swift  DaemonLifecycleTests.swift  DaemonTestLock.swift  IOSAppServerTests.swift  IOSHIDInputTests.swift  IOSMCPTests.swift  IOSSimulatorPicker.swift  MCPTestServer.swift  MacOSMCPTests.swift
Tests/PreviewsCLITests/: BUILD.bazel  ListToolsSnapshotTests.swift  PathNormalizationTests.swift  StallTimerTests.swift  TerminalImagesTests.swift  TraitSchemaTests.swift  list_tools_snapshot.json
Tests/PreviewsJITLinkTests/: ArchiveLoadingTests.swift  BUILD.bazel  CappedPersistentTests.swift  CompilerObjectTests.swift  ExamplesSplitE2ETests.swift  FixtureSupport.swift  IOSPreviewE2ETests.swift  IOSSimSpikeTests.swift  JITStructuralReloaderTests.swift  PreviewSessionSplitTests.swift  PreviewsJITLinkTests.swift  SplitCompileTests.swift  StructuralReloadLatencyTests.swift
Tests/PreviewsJITLinkTests/Fixtures/: abandon_slab.c  answer.c  caller.c  ctor.c  dynamic_cast.swift  external.c  helper.c  hosting_probe.swift  ios_render_probe.swift  leak_probe.c  main_thread_probe.swift  objc_class.swift  patch_slot.c  swiftui_probe.swift
bazel/embed/: BUILD.bazel  footer.swift  header.swift
previewsmcp/PreviewAgent/: BUILD.bazel  BundleRedirect.h  BundleRedirect.m  main.cpp
previewsmcp/PreviewsCLI/: BUILD.bazel  ConfigureCommand.swift  DaemonChannelTransport.swift  DaemonClient.swift  DaemonClientChannel.swift  DaemonLifecycle.swift  DaemonListener.swift  DaemonPaths.swift  DaemonProbe.swift  DaemonProtocol.swift  DaemonRestart.swift  DaemonSocket.swift  DaemonToolError.swift  DiffCommand.swift  ElementsCommand.swift  FDReadiness.swift  FileDescriptorModes.swift  FramedStdioTransport.swift  FramedTransport.swift  HTMLGallery.swift  KillDaemonCommand.swift  ListCommand.swift  LogsCommand.swift  MCPClienting.swift  MCPContentHelpers.swift  MCPParamExtraction.swift  MCPServer.swift  MCPServerSupport.swift  MCPServing.swift  MCPWire.swift  PingLiveness.swift  PreviewsMCPApp.swift  PreviewsMCPClient.swift  PreviewsMCPServer.swift  RunCommand.swift  SelfPath.swift  SerializedStdioTransport.swift  ServeCommand.swift  SessionResolver.swift  SessionTargetingOptions.swift  (+9 more)
previewsmcp/PreviewsCore/: AsyncProcess.swift  BUILD.bazel  BazelBuildSystem.swift  BazelCommandCapture.swift  BridgeGenerator.swift  BuildContext.swift  BuildSystem.swift  BuildSystemSupport.swift  CompileCommandNormalizer.swift  Compiler.swift  DesignTimeStore.swift  EvidenceSet.swift  FileWatcher.swift  FiredPathDamper.swift  IOSStructuralReloader.swift  LiteralDiffer.swift  LiteralRegionClassifier.swift  LogRotation.swift  OffCooperativePool.swift  OwnershipResolver.swift  Path.swift  PhaseFailure.swift  Platform.swift  PreviewBridgeSource.swift  PreviewParser.swift  PreviewSession.swift  PreviewSessionHandle.swift  PreviewTraits.swift  ProgressReporter.swift  ProjectConfig.swift  SPMBuildRecovery.swift  SPMBuildSystem.swift  SPMCommandCapture.swift  SetupBuilder.swift  SetupCache.swift  StructuralReloader.swift  ThunkGenerator.swift  Toolchain.swift  WatchSet.swift  XCFrameworkSlices.swift  (+3 more)
previewsmcp/PreviewsEngine/: BUILD.bazel  BuildHelpers.swift  DeviceClaims.swift  IOSPreviewHandle.swift  IOSSessionManager.swift  MacOSPreviewHandle.swift  SessionRegistry.swift  SessionRouter.swift  TempDirCleanup.swift  TraitHelpers.swift
previewsmcp/PreviewsIOS/: AVCCVideoStream.swift  BUILD.bazel  FrameSource.swift  H264Encoder.swift  IOSAgentBuilder.swift  IOSAgentChannel.swift  IOSPreviewSession.swift  InputSink.swift  PreviewAppServer.swift  SimulatorManager.swift
previewsmcp/PreviewsJITLinkCxx/: BUILD.bazel  PreviewsJITLinkCxx.cpp  SwiftEntrySectionPlugin.cpp  SwiftEntrySectionPlugin.hpp
previewsmcp/PreviewsMacOS/: BUILD.bazel  HostApp.swift  Snapshot.swift
previewsmcp/cli/: BUILD.bazel  main.swift
tools/lint/: BUILD.bazel  lint.sh
(+950 files in other folders)
