load("@rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "PreviewsJITLink",
    srcs = glob(["*.swift"]) + ["//bazel/shims:bundle_module_stub.swift"],
    copts = ["-swift-version", "6"],
    data = ["//:orc_rt"],
    module_name = "PreviewsJITLink",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/PreviewsCore",
        "//Sources/PreviewsJITLinkCxx",
    ],
)
