load("@rules_swift//swift:swift.bzl", "swift_binary")

swift_binary(
    name = "previewsmcp",
    srcs = glob(["*.swift"]),
    copts = [
        "-swift-version",
        "6",
        "-Xfrontend",
        "-default-isolation",
        "-Xfrontend",
        "MainActor",
    ],
    data = [
        "//:ios_jit_resources",
        "//:orc_rt_archive",
        "//Sources/PreviewAgent",
    ],
    visibility = ["//visibility:public"],
    deps = ["//Sources/PreviewsCLI"],
)
