load("@rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "PreviewsCLITests",
    srcs = glob(
        ["**/*.swift"],
        # Locates list_tools_snapshot.json via #filePath, which resolves
        # to the sandbox path under Bazel. Re-enable once #filePath
        # fixtures are relocated through runfiles.
        exclude = ["ListToolsSnapshotTests.swift"],
    ),
    copts = ["-swift-version", "6"],
    tags = ["local"],
    deps = [
        "//Sources/PreviewsCLI",
        "@swiftpkg_swift_sdk//:MCP",
    ],
)
