load("@rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "PreviewsJITLinkTests",
    srcs = glob(
        ["**/*.swift"],
        # Fixtures are compiled at runtime by the tests, not test sources.
        exclude = ["Fixtures/**"],
    ),
    copts = ["-swift-version", "6"],
    data = [
        "//:orc_rt_archive",
        "//Sources/PreviewAgent",
    ],
    env = {
        "PREVIEWSMCP_AGENT": "$(rlocationpath //Sources/PreviewAgent)",
        "PREVIEWSMCP_ORC_RT": "$(rlocationpath //:orc_rt_archive)",
    },
    tags = [
        "exclusive",
        "local",
    ],
    deps = [
        "//Sources/PreviewsCore",
        "//Sources/PreviewsJITLink",
    ],
)
