load("//bazel:embed.bzl", "embed_host_app_source")

exports_files([
    "header.swift",
    "footer.swift",
])

embed_host_app_source(
    name = "ios_host_app_source",
    app_icon = "//ios-host/agent:AppIcon.png",
    host_app = "//ios-host/agent:AgentApp.swift",
    info_plist = "//ios-host/agent:Info.plist",
    visibility = ["//visibility:public"],
)
