load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@rules_cc//cc:objc_library.bzl", "objc_library")
load("@rules_swift//swift:swift.bzl", "swift_interop_hint")

swift_interop_hint(
    name = "BundleRedirect_swift_hint",
    module_name = "BundleRedirect",
)

objc_library(
    name = "BundleRedirect",
    srcs = ["BundleRedirect.m"],
    hdrs = ["BundleRedirect.h"],
    aspect_hints = [":BundleRedirect_swift_hint"],
    visibility = ["//visibility:public"],
    alwayslink = True,
)

cc_binary(
    name = "PreviewAgent",
    srcs = ["main.cpp"],
    copts = [
        "-std=c++17",
        "-fno-rtti",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":BundleRedirect",
        "//:llvm",
    ],
)
