load("@rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "PreviewsCore",
    srcs = glob(["*.swift"]),
    copts = ["-swift-version", "6"],
    module_name = "PreviewsCore",
    visibility = ["//visibility:public"],
    deps = [
        "@swiftpkg_swift_syntax//:SwiftParser",
        "@swiftpkg_swift_syntax//:SwiftSyntax",
    ],
)
