load("@rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "PreviewsEngine",
    srcs = glob(["*.swift"]),
    copts = [
        "-swift-version",
        "6",
    ],
    module_name = "PreviewsEngine",
    visibility = ["//visibility:public"],
    deps = [
        "//previewsmcp/PreviewsCore",
        "//previewsmcp/PreviewsIOS",
        "//previewsmcp/PreviewsMacOS",
    ],
)
