load("@rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "PreviewsMacOS",
    srcs = glob(["*.swift"]),
    copts = [
        "-swift-version",
        "6",
    ],
    module_name = "PreviewsMacOS",
    visibility = ["//visibility:public"],
    deps = ["//previewsmcp/PreviewsCore"],
)
