load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

_TOOLS = {
    "BUILDIFIER": "$(rlocationpath @buildifier_darwin_arm64//file)",
    "CLANG_FORMAT": "$(rlocationpath @clang_format_darwin_arm64//file)",
    "SWIFTLINT": "$(rlocationpath @swiftlint_darwin//:swiftlint)",
}

_DATA = [
    "@buildifier_darwin_arm64//file",
    "@clang_format_darwin_arm64//file",
    "@swiftlint_darwin//:swiftlint",
]

sh_binary(
    name = "format",
    srcs = ["lint.sh"],
    args = ["fix"],
    data = _DATA,
    env = _TOOLS,
    visibility = ["//visibility:public"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

sh_binary(
    name = "check",
    srcs = ["lint.sh"],
    args = ["check"],
    data = _DATA,
    env = _TOOLS,
    visibility = ["//visibility:public"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
