load("@rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "BundleRedirectTests",
    size = "small",
    srcs = glob(["*.swift"]),
    copts = [
        "-swift-version",
        "6",
    ],
    visibility = ["//visibility:public"],
    deps = ["//previewsmcp/PreviewAgent:BundleRedirect"],
)
