load("@rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "CLIIntegrationTests",
    srcs = glob(["**/*.swift"]),
    copts = [
        "-swift-version",
        "6",
    ],
    data = [
        "//:ios_jit_resources",
        "//:orc_rt_archive",
        "//previewsmcp/PreviewAgent",
        "//previewsmcp/cli:previewsmcp",
    ],
    env = {
        "PREVIEWSMCP_AGENT": "$(rlocationpath //previewsmcp/PreviewAgent)",
        "PREVIEWSMCP_BINARY": "$(rlocationpath //previewsmcp/cli:previewsmcp)",
        "PREVIEWSMCP_IOS_JIT_DIR": "$(rlocationpath //:ios_jit_resources)",
        "PREVIEWSMCP_ORC_RT": "$(rlocationpath //:orc_rt_archive)",
        # No PREVIEWSMCP_SOCKET_DIR literal: the harness derives a short per-run
        # daemon socket dir (/tmp/pmcp-<hash>) keyed off $TEST_TMPDIR via
        # DaemonTestLock.effectiveSocketDir and exports it into spawned
        # daemons/CLIs (#283). $TEST_TMPDIR is unique per target, so no manual
        # non-colliding literal is needed. (Hashed to /tmp, not nested under
        # $TEST_TMPDIR, because the UDS path is capped at 104 bytes — sun_path.)
    },
    tags = [
        "exclusive",
        "local",
    ],
    visibility = ["//visibility:public"],
)
